29/playbooks/files/iptables-inetRouter.rules
*nat
:PREROUTING ACCEPT [18:1368]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [12:864]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.0.2:80
-A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
-A POSTROUTING -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT [22:4624]
:FORWARD ACCEPT [18038:25632697]
:OUTPUT ACCEPT [2151:194631]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
COMMIT
