29/playbooks/files/iptables-inetRouter2.rules
# Generated by iptables-save v1.4.21 on Mon Sep 11 09:27:29 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [8:608]
:POSTROUTING ACCEPT [0:0]
-A OUTPUT -p tcp -m addrtype --src-type LOCAL --dst-type LOCAL -m tcp --dport 8080 -j DNAT --to-destination 192.168.56.10
-A POSTROUTING -m addrtype --src-type LOCAL --dst-type UNICAST -j MASQUERADE
COMMIT
# Completed on Mon Sep 11 09:27:29 2023
# Generated by iptables-save v1.4.21 on Mon Sep 11 09:27:29 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [261:31111]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Mon Sep 11 09:27:29 2023
